@@ -1,9 +1,9 @@
-[manpage_begin nameserv::auto n 0.2]
+[manpage_begin nameserv::auto n 0.2.1]
 [copyright {2007-2008 Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
 [moddesc   {Name service facility}]
 [titledesc {Name service facility, Client Extension}]
 [require Tcl 8.4]
-[require nameserv::auto [opt 0.2]]
+[require nameserv::auto [opt 0.2.1]]
 [require nameserv]
 [keywords {name service} client restore reconnect automatic]
 [see_also nameserv(n)]
