@@ -1,9 +1,9 @@
-[manpage_begin nameserv::server n 0.3]
+[manpage_begin nameserv::server n 0.3.1]
 [copyright {2007-2008 Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
 [moddesc   {Name service facility}]
 [titledesc {Name service facility, Server}]
 [require Tcl 8.4]
-[require nameserv::server [opt 0.3]]
+[require nameserv::server [opt 0.3.1]]
 [require comm]
 [require interp]
 [require logger]
